fix weird alignment issue

--- a/src/pages/start/index.css
+++ b/src/pages/start/index.css
@@ -25,7 +25,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
-    width: 95%;
+    width: 100%;
 }
 
 .start-section-wrapper h3 {
